--- a/templates/python-common/pyproject.toml
+++ b/templates/python-common/pyproject.toml
@@ -21,6 +21,12 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.10"
 python-dotenv = ">=1.0.0"
+psycopg = {version = ">=3.1", optional = true}
+mysql-connector-python = {version = ">=8.3", optional = true}
+
+[tool.poetry.extras]
+postgres = ["psycopg"]
+mariadb = ["mysql-connector-python"]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0"
