--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
 permissions:
   contents: write
 jobs:
-  deploy:
+  deploy_docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
