--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ poetry-plugin-export = ">=1.8"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = ">=1.6.0"
+mkdocs-material = ">=9.5.0"
 
 [build-system]
 requires = ["poetry-core>=1.7.0"]
