--- a/templates/python-common/.pre-commit-config.yaml
+++ b/templates/python-common/.pre-commit-config.yaml
@@ -87,14 +87,14 @@ repos:
     hooks:
       - id: check-unix-filenames
         name: check unix/linux filename validity
-        entry: bash bin/check_unix_filenames.sh
+        entry: bash scripts/check_unix_filenames.sh
         language: system
         types:
           - file
 
       - id: export-dependencies
         name: export dependencies
-        entry: bash bin/export_deps.sh
+        entry: bash scripts/export_deps.sh
         language: system
         types:
           - file
@@ -135,7 +135,7 @@ repos:
       
       - id: check-urls
         name: check urls in docstrings
-        entry: bash bin/test_urls_docstrings.sh
+        entry: bash scripts/test_urls_docstrings.sh
         language: system
         types:
           - file
